# ArkPRTS

./: .gitignore  .readthedocs.yml  CONTRIBUTING.md  README.md  noxfile.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: checks.yml  publish.yml
arkprts/: __init__.py  __main__.py  auth.py  automation.py  client.py  errors.py  gamedata.py  network.py
arkprts/assets/: __init__.py  __main__.py  base.py  bundle.py  git.py
arkprts/models/: __init__.py  base.py  battle.py  data.py  social.py
dev-requirements/: docs.txt  lint.txt  pytest.txt  setup.py  typecheck.txt
docs/: conf.py
tests/: conftest.py  test_assets.py  test_auth.py  test_client.py  test_config.py  test_gamedata.py
